package com.kappstats.presentation.constants

object Tags {
    const val ACCEPT = "accept"
    const val BIO = "bio"
    const val CANCEL = "cancel"
    const val CLEAR = "clear"
    const val CONFIRM = "confirm"
    const val DRAWER_MENU = "drawer_menu"
    const val EMAIL = "email"
    const val EXPAND_BUTTON = "expand"
    const val LOADING = "loading"
    const val MODAL_DRAWER = "modal_drawer"
    const val NAME = "name"
    const val NAV_BUTTON = "nav_button"
    const val NEW_VALUE = "new_value"
    const val NEW_VALUE_CONFIRM = "new_value_confirm"
    const val PASSWORD = "password"
    const val PASSWORD_CONFIRM = "password_confirm"
    const val SCAFFOLD = "scaffold"
    const val SNACKBAR = "snackbar"
    const val TOP_BAR = "top_bar"
    const val USERNAME = "username"
}