...
    <string name="dashboard">Dashboard</string>
    <string name="delete">Delete</string>
    <string name="delete_app_monitor">Delete %1$s app monitor?</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="edit_app_monitor">Edit %1$s app monitor?</string>
    <string name="email">Email</string>
    <string name="empty_list">Empty List</string>
    <string name="error_auth_update">Auth update error.</string>
    <string name="error_email">Please enter a valid email (e.g., name@example.com).</string>
    <string name="error_logout">Error in application log out.</string>
    <string name="error_password">Password must be at least 8 characters, with one uppercase letter, one number, and one special character.</string>
    <string name="error_password_confirm">Passwords do not match</string>
...
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="network">Network</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="ok">Ok</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_and_terms">Privacy Policy and Terms</string>
    <string name="processes">Processes</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
...
